# git-server

./: README.md  index.html  params.json
storage/data/: Almas_AI_ATE.pptx  Almas_AI_ATE_v2.pptx  PuzzlesDec2025.docx  UoB_Robotics_Workshop.pptx  test-motd.txt
storage/images/: CMakeLists.txt  Main.cl  Main.java
